--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 body {
   color: white;
   width: 100dvw;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   height: 100%;
   background: #000;
   border-color: #3b3b3b;
@@ -113,7 +113,7 @@ canvas {
   }
 
   .hiw-video {
-    @apply absolute w-[95%] h-[90%] rounded-[56px] overflow-hidden;
+    @apply absolute w-[95%] h-[90%] rounded-[56px] !overflow-hidden;
   }
 
   .hiw-text-container {
